Add BEM naming convention to footer

--- a/practice-2/src/styles/components/footer.css
+++ b/practice-2/src/styles/components/footer.css
@@ -2,14 +2,14 @@
   background-color: #f6f6f6;
 }
 
-.social-icon {
+.footer__icon {
   display: flex;
   justify-content: center;
   font-size: 18px;
   list-style: none;
 }
 
-.social-icon li {
+.footer__icon li {
   margin: 20px;
   color: #4b4b4b;
 }
@@ -18,14 +18,14 @@
   margin: 0 10px 20px;
 }
 
-.outtro {
+.footer__des {
   font-family: Source-sans-pro;
   font-size: 11px;
   text-align: center;
   margin: 0 50px;
 }
 
-.email {
+.footer__email {
   margin: 20px 0;
   text-align: center;
 }
@@ -49,7 +49,7 @@
   cursor: pointer;
 }
 
-.info {
+.footer__info {
   overflow: hidden;
   list-style: none;
   display: flex;
@@ -58,7 +58,7 @@
   margin: 0 20px;
 }
 
-.info li a {
+.footer__info li a {
   font-family: Source-sans-pro-bold;
   font-size: 12px;
   text-decoration: none;
@@ -67,7 +67,7 @@
   padding: 0 20px;
 }
 
-.contact {
+.footer__contact {
   font-family: Source-sans-pro;
   font-size: 11px;
   text-align: center;
@@ -75,7 +75,7 @@
   margin: 30px 0;
 }
 
-.copy-right {
+.footer__copy-right {
   font-family: Source-sans-pro;
   font-size: 11px;
   text-align: center;
@@ -84,33 +84,33 @@
 }
 
 @media screen and (min-width: 768px) {
-  .info {
+  .footer__info {
     overflow: visible;
     margin: 20px 0;
     grid-area: info;
     flex-wrap: nowrap;
     justify-content: start;
   }
-  .social-icon {
+  .footer__icon {
     grid-area: icon;
     justify-content: end;
   }
-  .contact {
+  .footer__contact {
     grid-area: contact;
     text-align: start;
     margin: 0 20px;
   }
-  .outtro {
+  .footer__des {
     grid-area: outtro;
     text-align: end;
     margin-right: 20px;
   }
-  .copy-right {
+  .footer__copy-right {
     grid-area: copy-right;
     text-align: start;
     margin: 30px 20px 0;
   }
-  .email {
+  .footer__email {
     grid-area: email;
     text-align: end;
     margin: 0;
@@ -134,26 +134,26 @@
     padding: 0 100px;
   }
 
-  .info {
+  .footer__info {
     padding: 30px 0;
   }
-  .info li a {
+  .footer__info li a {
     font-size: 18px;
   }
-  .social-icon {
+  .footer__icon {
     padding: 30px 0;
     font-size: 24px;
   }
 
-  .contact {
+  .footer__contact {
     font-size: 16px;
   }
 
-  .copy-right {
+  .footer__copy-right {
     font-size: 16px;
   }
 
-  .outtro {
+  .footer__des {
     font-size: 16px;
   }
 
